# anagramdr

./: .gitignore  README.md  deploy.sh
anagramdr/: Cargo.toml
anagramdr/data/: pos_n_grams.jsonl  tagging_stats.jsonl  words.jsonl
anagramdr/src/: main.rs  todo.md
engine/: .gitignore
engine/data/: pos_n_grams.jsonl  tagging_stats.jsonl
engine/src/: main.rs  todo.md
nlp/: README.md  blacklist.csv  create_datasets.py  fr_words.csv  pos_words.py  tag_corpus.py  tagging_stats_test.jsonl  unique_sorted.py  vocab.jsonl  words_v2.jsonl
website/: package-lock.json  package.json  vite.config.js
website/src/: app.html  app.scss  fonts.scss
website/src/lib/: AnagramAnimation.svelte  GifExporter.svelte  Logo.svelte  VecTest.svelte  index.ts
website/src/routes/: +layout.svelte  +page.svelte
website/src/routes/(app)/: +layout.svelte  +page.svelte
website/src/routes/(app)/export/: +page.svelte
website/src/routes/(app)/resultats/: +page.svelte
website/src/routes/(app)/results/: +page.svelte
website/src/routes/export/: +page.svelte
website/src/routes/results/: +page.js  +page.svelte
website/src/routes/viz/: +page.svelte
