[package]
name = "anagramdr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.26"
strum_macros = "0.26"
serde_json = "1.0.112"
itertools = "0.12.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"