[package]
name = "anagramdr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.26"
strum_macros = "0.26"
serde = "1.0.112"
serde_json = "1.0.112"
serde_derive = "1.0.112"
itertools = "0.12.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
unicode-normalization = "0.1.23"
urlencoding = "2.1.3"
mimalloc = { version = "0.1.43", default-features = false }
rustc-hash = "2.1.0"
rayon = "1.10.0"

[profile.release]
debug=true
lto = "fat"
codegen-units = 1
panic = "abort"
